--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.js linguist-language=java
 *.css linguist-language=java
 *.html linguist-language=java
+*.exe filter=lfs diff=lfs merge=lfs -text
 ffmpeg.exe filter=lfs diff=lfs merge=lfs -text
